<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_help_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/activity_help_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/activity_stu_class_tv_title"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/activity_stu_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/action_general_back_state"
                android:clickable="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/action_general_iv_menu"
                    android:layout_width="25dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center|left"
                    android:background="@null"
                    android:paddingLeft="11dp"
                    android:src="@drawable/ic_general_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_general_back"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </FrameLayout>
    </android.support.v7.widget.Toolbar>

    <ListView
        android:id="@+id/activity_stu_lv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/activity_stu_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/btn_select_state"
        android:text="@string/activity_stu_class"
        android:textColor="@android:color/white" />
</LinearLayout>